Learnapi is added

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /ConsoleToWebAPI/.vs/ConsoleToWebAPI
 /ConsoleToWebAPI/bin/Debug/net6.0
 /ConsoleToWebAPI/obj
+/LearnAPI/bin/Debug/net7.0
+/LearnAPI/obj
