Auto mapper functionality is added

--- a/LearnAPI/appsettings.json
+++ b/LearnAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "apiconn": "Server=SRV2022\\SQLEXPRESS;DataBase=test_db;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
