migration is added

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 /ConsoleToWebAPI/obj
 /LearnAPI/bin/Debug/net7.0
 /LearnAPI/obj
+/ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.metadata.v7.bin
+/ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.metadata.v7.bin
+/ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.metadata.v7.bin
+/ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.metadata.v7.bin
+/ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.metadata.v7.bin
+/ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.projects.v7.bin
