migration is added

--- a/LearnAPI/appsettings.json
+++ b/LearnAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "apiconn": "Server=SRV2022\\SQLEXPRESS;DataBase=test_db;Trusted_Connection=True;TrustServerCertificate=True;"
+    "apiconn": "Server=(localdb)\\MSSQLLocalDB;DataBase=test_db;Trusted_Connection=True;TrustServerCertificate=True;"
+   // "apiconn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
