Migration and issue fixed in automapper

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.metadata.v7.bin
 /ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.metadata.v7.bin
 /ConsoleToWebAPI/.vs/ProjectEvaluation/consoletowebapi.projects.v7.bin
+/ConsoleToWebAPI/.vs/ProjectEvaluation
