Migration and issue fixed in automapper

--- a/ConsoleToWebAPI/appsettings.json
+++ b/ConsoleToWebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conn": "Server=(localdb)\\MSSQLLocalDB;DataBase=Code_First;Trusted_Connection=True;TrustServerCertificate=True;"
+    "conn": "Server=LTIN540574;DataBase=Code_First;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
