CORS and Rate Limitter functionality is added in Learn API

--- a/LearnAPI/appsettings.json
+++ b/LearnAPI/appsettings.json
@@ -1,5 +1,6 @@
 {
   "Logging": {
+    "Logpath": "C:\\Users\\2331192\\source\\repos\\LearnApi_Log.txt",
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
