--- a/ConsoleToWebAPI/appsettings.json
+++ b/ConsoleToWebAPI/appsettings.json
@@ -1,5 +1,6 @@
 {
   "Logging": {
+    "Logpath": "C:\\Users\\2331192\\source\\repos\\ConsoleToApi_Log.txt",
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
