JWT Authentication(Generate and Refresh Token) Functionality is added

--- a/LearnAPI/appsettings.json
+++ b/LearnAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "JwtSettings": {
+    "securitykey": "thisismyapikeythisismyapikeythisismyapikey"
+  },
   "Logging": {
     "Logpath": "C:\\Users\\2331192\\source\\repos\\LearnApi_Log.txt",
     "LogLevel": {
@@ -10,5 +13,6 @@
   "ConnectionStrings": {
     "apiconn": "Server=LTIN540574;DataBase=test_db;Trusted_Connection=True;TrustServerCertificate=True;"
     // "apiconn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    // "apiconn": "Server=SRV2022\SQLEXPRESS;DataBase=test_db;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
